After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752980 - enterprise login fixes
enterprise login fixes
Status: RESOLVED FIXED
Product: gnome-initial-setup
Classification: Applications
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Initial Setup maintainer(s)
GNOME Initial Setup maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-07-28 19:40 UTC by Ray Strode [halfline]
Modified: 2015-07-31 19:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
keyring: don't change keyring password explicitly (7.00 KB, patch)
2015-07-28 19:40 UTC, Ray Strode [halfline]
committed Details | Review
password: detect enterprise account by NULL username when saving (3.06 KB, patch)
2015-07-28 19:40 UTC, Ray Strode [halfline]
none Details | Review
account: set act_user object on driver (11.00 KB, patch)
2015-07-28 19:40 UTC, Ray Strode [halfline]
committed Details | Review
driver: duplicate password (4.35 KB, patch)
2015-07-28 19:40 UTC, Ray Strode [halfline]
none Details | Review
password: detect enterprise account without heuristic (13.95 KB, patch)
2015-07-31 19:31 UTC, Ray Strode [halfline]
committed Details | Review
driver: duplicate password/user object (4.66 KB, patch)
2015-07-31 19:31 UTC, Ray Strode [halfline]
committed Details | Review

Description Ray Strode [halfline] 2015-07-28 19:40:23 UTC
Here's a few fixes that get enterprise login working again.
Comment 1 Ray Strode [halfline] 2015-07-28 19:40:30 UTC
Created attachment 308322 [details] [review]
keyring: don't change keyring password explicitly

It will happen automatically by the pam stack
Comment 2 Ray Strode [halfline] 2015-07-28 19:40:34 UTC
Created attachment 308323 [details] [review]
password: detect enterprise account by NULL username when saving

Right now we detect an enterprise account by the lack of an
ActUser object.  That can't work going forward though, since other
bits of the code need an ActUser object for enterprise accounts.

This commit changes the heuristic to look for a NULL username.
Comment 3 Ray Strode [halfline] 2015-07-28 19:40:37 UTC
Created attachment 308324 [details] [review]
account: set act_user object on driver

The summary page expects the act-user object to be set in
the driver.  That only happens at the moment for local
users, not enterprise login users.

This commit fixes things, so it happens for enterprise login
users as well.
Comment 4 Ray Strode [halfline] 2015-07-28 19:40:40 UTC
Created attachment 308325 [details] [review]
driver: duplicate password

Otherwise it will get freed at an inopportune moment.
Comment 5 Matthias Clasen 2015-07-29 17:19:01 UTC
Review of attachment 308322 [details] [review]:

given that you've tested it with local and enterprise accounts, +1
Comment 6 Matthias Clasen 2015-07-29 17:21:21 UTC
Review of attachment 308323 [details] [review]:

hmm, ok. So we replace one heuristic with another... could just add an explicit getter/setter to the driver
Comment 7 Matthias Clasen 2015-07-29 17:21:59 UTC
Review of attachment 308324 [details] [review]:

ok
Comment 8 Matthias Clasen 2015-07-29 17:23:26 UTC
Review of attachment 308325 [details] [review]:

::: gnome-initial-setup/gis-driver.c
@@ +181,3 @@
 {
   GisDriverPrivate *priv = gis_driver_get_instance_private (driver);
   priv->user_account = user;

Shouldn't we then go all the way and ref the user as well ?
Comment 9 Ray Strode [halfline] 2015-07-31 19:31:17 UTC
Created attachment 308580 [details] [review]
password: detect enterprise account without heuristic

Right now we detect an enterprise account by the lack of an
ActUser object.  That can't work going forward though, since other
bits of the code need an ActUser object for enterprise accounts.

This commit adds the account mode to the driver and changes the
password page to look at the account mode directly.
Comment 10 Ray Strode [halfline] 2015-07-31 19:31:32 UTC
Created attachment 308581 [details] [review]
driver: duplicate password/user object

The driver needs to hold an internal copy of the password,
so the password isn't freed at an inopportune moment.

For symmetry, this commit also takes a reference on the
user object that is passed at the same time.
Comment 11 Ray Strode [halfline] 2015-07-31 19:32:03 UTC
pushed with suggested improvements

Attachment 308322 [details] pushed as 0216872 - keyring: don't change keyring password explicitly
Attachment 308324 [details] pushed as 857e22c - account: set act_user object on driver
Attachment 308580 [details] pushed as 9d5b92e - password: detect enterprise account without heuristic
Attachment 308581 [details] pushed as 2842336 - driver: duplicate password/user object