account: set act_user object on driver

The summary page expects the act-user object to be set in
the driver.  That only happens at the moment for local
users, not enterprise login users.

This commit fixes things, so it happens for enterprise login
users as well.

https://bugzilla.gnome.org/show_bug.cgi?id=752980